fixed formatting on small and medium screens

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ nav.navbar a.navbar-brand {
 }
 
 /* main */
-div.col-8 div.container {
+div.col-lg-8 div.container {
     margin-top: 40px;
     padding: 25px;
     background-color: white;
